--- a/src/styles/sass/layouts/_carousel.scss
+++ b/src/styles/sass/layouts/_carousel.scss
@@ -1,6 +1,6 @@
 .carousel {
     &-section {
-        background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.75)), url("../img/pelatihan11.png");
+        background-image: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.75)), url("/pelatihan11.png");
         height: 100vh;
         background-attachment: fixed;
         background-position: center;
