--- a/src/styles/sass/components/_buttons.scss
+++ b/src/styles/sass/components/_buttons.scss
@@ -7,6 +7,8 @@
     transition: 0.3s ease-in-out;
     font-size: 1.4rem;
     margin:0 0.3em 0.3em 0;
+    min-width: 44px;
+    min-height: 44px;
     cursor: pointer;
    
     &-primary {
